syntax = "proto3";

package com.lifemmo.pl.base;
import "plcommon.proto";

message RouteHeaderMsg {
  HeaderMsg header_msg = 1;
  int32 sid = 2;
  bool is_system = 3;
  bool is_reply = 4;
  bool is_base = 5;
  bool is_backend = 6;
  string session_info = 7;
  int64 room_id = 8;
  int64 account_id = 9;
}

message RoutePacketMsg {
  RouteHeaderMsg route_header_msg = 1;
  bytes message = 2;
}


message ServerInfoMsg{
  string service_type = 1;
  string service_id = 2;
  string endpoint = 3;
  string server_state = 4;
  int64 timestamp = 5;
  int32 weighting_point = 6;
}

message AuthenticateMsg {
  string service_id = 1;
  int64 account_id = 2;
  string session_info = 3;
}

message UpdateSessionInfoMsg {
  string service_id = 1;
  string session_info = 2;
}


message SessionCloseMsg {
}

message DisconnectNoticeMsg {
  int64 account_id = 1;
//  string session_info = 2;

}

//////////////// for room service //////////////////////////


message CreateJoinRoomReq {
  string roomType = 1;
  string create_payload_name = 2;
  bytes create_payload = 3;
  string join_payload_name =4;
  bytes join_payload = 5;
  string sessionEndpoint = 6;
  int32 sid = 7;
}

message CreateJoinRoomRes {
  bool isCreated =1;
  string create_payload_name = 2;
  bytes create_payload = 3;
  string join_payload_name =4;
  bytes join_payload = 5;
}

message CreateRoomReq {
  string roomType = 1;
//  int64 accountId = 2;
  string payload_name = 3;
  bytes payload = 4;
}

message CreateRoomRes {
  int64 roomId =1;
  string payload_name = 2;
  bytes payload = 3;
}

message JoinRoomReq {
//  int64 roomId = 1;
//  int64 accountId = 2;
  string sessionEndpoint = 1;
  int32 sid = 2;
  string payload_name = 3;
  bytes payload = 4;
}

message JoinRoomMsg{
  string roomEndpoint = 1;
  int64 roomId = 2;


}

message JoinRoomRes {
  string payload_name = 1;
  bytes payload = 2;
}

message LeaveRoomMsg {
}

//message LeaveRoomRes {
//  bool result =1;
//  string payload_name = 2;
//  bytes payload = 3;
//}

message DeleteRoomReq {
  string payload_name = 1;
  bytes payload = 2;
}

message DeleteRoomRes {
  string payload_name = 1;
  bytes payload = 2;
}
message SessionClose {
  string session_id = 1;
}
message TimerMsg {
  enum Type{
    REPEAT = 0;
    COUNT = 1 ;
    CANCEL = 2;
  }
  Type type = 1;
  int64 initial_delay = 3;
  int64 period = 4;
  int32 count = 5;
}

message RoomTimer {}


message ForceLeaveRoom {
}
message DestroyRoom {
}

message AsyncBlock {
}

