syntax = "proto3";

package org.ulalax.playhouse.protocol;

/**
client packet
1byte header size + header + body
 */

message HeaderMsg {
  string service_id = 1;
  int32 msg_seq = 2;
  string msg_name = 3;
  int32 error_code = 4;

}

message PacketMsg {
  HeaderMsg header_msg = 1;
  bytes message = 2;
}


enum BaseErrorCode{
  SUCCESS = 0;
  SYSTEM_ERROR = -1;
  UNCHECKED_CONTENTS_ERROR = -2;
  REQUEST_TIMEOUT = -3;

  STAGE_TYPE_IS_INVALID = -101;
  STAGE_IS_NOT_EXIST =  -102;
}